# ros2-rust-workshop-champ-robot

./: .gitignore  README.md  frames_2024-11-05_22.49.03.gv
.cargo/: config.toml
src/champ/champ_config/launch/: gazebo.launch.py
src/champ/champ_config/worlds/: barrels.world
src/champ/champ_gazebo/launch/: gazebo.launch.py
src/champ/git-backup/: config  index  packed-refs
src/champ/git-backup/logs/: HEAD
src/champ/git-backup/logs/refs/remotes/origin/: HEAD
src/champ/git-backup/modules/champ/include/champ/: HEAD  config  index  packed-refs
src/champ/git-backup/modules/champ/include/champ/logs/: HEAD
src/champ/git-backup/objects/pack/: pack-d4e6797d62bf0e6280600487ade84230a793d8bf.idx
src/champ/git-backup/refs/heads/: ros2
src/ros2_rust/git-backup/: config  index  packed-refs
src/ros2_rust/git-backup/logs/refs/remotes/origin/: HEAD
src/ros2_rust/git-backup/objects/pack/: pack-1ac443686005b92ac14bade8a038275a3a0c119a.idx  pack-1ac443686005b92ac14bade8a038275a3a0c119a.pack
src/ros2_rust/git-backup/refs/heads/: main
src/ros2_rust_workshop/.ipynb_checkpoints/: test_en-checkpoint.ipynb
src/ros2_rust_workshop/git-backup/: config  index  packed-refs
src/ros2_rust_workshop/git-backup/logs/: HEAD
src/ros2_rust_workshop/git-backup/objects/pack/: pack-d7b41f4dbc558f8f97337517c8faede86a31ca43.idx  pack-d7b41f4dbc558f8f97337517c8faede86a31ca43.pack
src/ros2_rust_workshop/git-backup/refs/heads/: main
src/rust_apps/: Cargo.toml  package.xml
src/rust_apps/src/: cmd_vel_publisher.rs  obstacle_avoidance.rs  scan_subscriber.rs
(+4 files in other folders)
